--- a/INDEX/index.css
+++ b/INDEX/index.css
@@ -174,11 +174,13 @@
 
 * {box-sizing:border-box}
 
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
+  z-index: 3;
 }
 
 /* Hide the images by default */
@@ -265,6 +267,17 @@
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+
+
+
+
+
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
 
 
